@@ -1,0 +1,106 @@
+# Automatically generated by php-weathermap v0.98
+
+
+WIDTH 1000
+HEIGHT 1000
+
+KEYPOS DEFAULT -1 -1 Traffic Load
+KEYTEXTCOLOR 0 0 0
+KEYOUTLINECOLOR 0 0 0
+KEYBGCOLOR 255 255 255
+BGCOLOR 255 255 255
+TITLECOLOR 0 0 0
+TIMECOLOR 0 0 0
+SCALE DEFAULT 0    0    192 192 192  
+SCALE DEFAULT 0    1    255 255 255  
+SCALE DEFAULT 1    10   140   0 255  
+SCALE DEFAULT 10   25    32  32 255  
+SCALE DEFAULT 25   40     0 192 255  
+SCALE DEFAULT 40   55     0 240   0  
+SCALE DEFAULT 55   70   240 240   0  
+SCALE DEFAULT 70   85   255 192   0  
+SCALE DEFAULT 85   100  255   0   0  
+
+SET key_hidezero_DEFAULT 1
+
+# End of global section
+
+
+# TEMPLATE-only NODEs:
+NODE DEFAULT
+	LABEL {node:this:name}
+	MAXVALUE 100
+	ICON 48 48 images/hollow32.png
+
+
+
+# TEMPLATE-only LINKs:
+LINK DEFAULT
+	BANDWIDTH 100M
+
+
+# regular NODEs:
+NODE bignode
+	AICONFILLCOLOR none
+	ICON 64 500 box
+	POSITION 500 500
+
+NODE node00721
+	POSITION 502 73
+
+NODE node00723
+	POSITION 755 595
+
+NODE node00725
+	POSITION 263 186
+
+NODE node00727
+	POSITION 499 921
+
+NODE node00729
+	POSITION 291 390
+
+NODE node00732
+	POSITION 752 717
+
+NODE node00734
+	POSITION 277 569
+
+NODE node00736
+	POSITION 252 661
+
+NODE node00739
+	POSITION 821 181
+
+
+# regular LINKs:
+LINK node00721-bignode
+	NODES node00721 bignode
+
+LINK bignode-node00723
+	NODES bignode node00723
+
+LINK bignode-node00725
+	NODES bignode node00725
+
+LINK node00727-bignode
+	NODES node00727 bignode
+
+LINK bignode-node00729
+	NODES bignode node00729
+
+LINK node00734-bignode
+	NODES node00734 bignode
+
+LINK node00732-bignode
+	NODES node00732 bignode
+
+LINK node00736-bignode
+	NODES node00736 bignode
+
+LINK node00739-bignode
+	NODES node00739 bignode
+
+
+
+# That's All Folks!
