@@ -1,0 +1,89 @@
+# Automatically generated by php-weathermap v0.98
+
+
+
+KEYPOS DEFAULT -1 -1 Traffic Load
+KEYTEXTCOLOR 0 0 0
+KEYOUTLINECOLOR 0 0 0
+KEYBGCOLOR 255 255 255
+BGCOLOR 255 255 255
+TITLECOLOR 0 0 0
+TIMECOLOR 0 0 0
+SCALE DEFAULT 0    0    192 192 192  
+SCALE DEFAULT 0    1    255 255 255  
+SCALE DEFAULT 1    10   140   0 255  
+SCALE DEFAULT 10   25    32  32 255  
+SCALE DEFAULT 25   40     0 192 255  
+SCALE DEFAULT 40   55     0 240   0  
+SCALE DEFAULT 55   70   240 240   0  
+SCALE DEFAULT 70   85   255 192   0  
+SCALE DEFAULT 85   100  255   0   0  
+
+SET key_hidezero_DEFAULT 1
+
+# End of global section
+
+
+# TEMPLATE-only NODEs:
+NODE DEFAULT
+	MAXVALUE 100
+
+
+# TEMPLATE-only LINKs:
+LINK DEFAULT
+	BANDWIDTH 100M
+
+
+# regular NODEs:
+NODE node3
+	LABEL Node
+	ICON 128 128 images/hollow32.png
+	POSITION 141 472
+
+NODE node2
+	LABEL Node
+	ICON 128 128 images/hollow32.png
+	POSITION 368 214
+
+NODE node1
+	LABEL Node
+	ICON 128 128 images/hollow32.png
+	POSITION 75 146
+
+NODE node5
+	LABEL Node
+	ICON 128 128 images/hollow32.png
+	POSITION 723 143
+
+NODE node5_copy
+	LABEL Node
+	ICON 128 128 images/hollow32.png
+	POSITION 635 450
+
+
+# regular LINKs:
+LINK hsnap
+	NODES node1 node2
+
+LINK vsnap
+	NODES node1 node3
+
+LINK complex
+	NODES node3 node2
+
+LINK hsnaprev
+	NODES node5 node2
+
+LINK node5_copy-node3
+	NODES node5_copy node3
+
+LINK node5_copy-node5
+	NODES node5_copy node5
+
+LINK node5_copy-node2
+	WIDTH 10
+	NODES node5_copy node2
+
+
+
+# That's All Folks!
